improvements to themes 1-4; general theming

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -47,7 +47,7 @@ body {
 
 /* TYPE STYLES */
 
-h2.title, p, div.messages, .views-row {
+h2.title, p, div.messages, #content-main .views-row {
 	margin-bottom: 1.5em;
 	}
 
@@ -93,6 +93,11 @@ li.leaf, li.collapsed {
   font-size:.8em;
   }
 
+.views-admin-links {
+  text-align:right;
+  }
+
+
 .links li {
   font-size: .9em;
   }
@@ -100,6 +105,8 @@ li.leaf, li.collapsed {
 div.terms {
   clear: left !important;
   }
+
+
 
 /* LAYOUT */
 
