--- a/sites/all/themes/scholar_theme_01/scholar-theme-01.css
+++ b/sites/all/themes/scholar_theme_01/scholar-theme-01.css
@@ -215,3 +215,10 @@ body.two-sidebars #content, body.header-left-main-right #header-main .content {
     margin-right: 20px;
     }
 
+/* Nodes */
+
+.submitted {
+  color: #444;
+  border-bottom: 1px solid #D8D6D6;
+  display:block;
+  }
