--- a/sites/all/themes/scholar_theme_02/scholar-theme-02.css
+++ b/sites/all/themes/scholar_theme_02/scholar-theme-02.css
@@ -62,8 +62,6 @@ h1 a, h2 a, h3 a, #sidebar-right a {
     }
 
 
-
-
 /* HEADER ELEMENTS */
 
 #header {
@@ -122,3 +120,10 @@ body.two-sidebars #content {
     margin-right: 20px;
     }
 
+/* Nodes */
+
+.submitted {
+  color: #444;
+  border-bottom: 1px dashed #a1b1b1;
+  display:block;
+  }
