--- a/sites/all/themes/scholar_theme_06/scholar-theme-06.css
+++ b/sites/all/themes/scholar_theme_06/scholar-theme-06.css
@@ -72,6 +72,9 @@ body.sidebar-left #content-wrapper {
     margin-bottom: 30px;
     }
 
+body.no-sidebars #content-wrapper {
+  padding: 0 30px;
+  }
 
 /* HEADER ELEMENTS */
 
