--- a/sites/all/themes/scholar_theme_07/scholar-theme-07.css
+++ b/sites/all/themes/scholar_theme_07/scholar-theme-07.css
@@ -83,6 +83,7 @@ h1 a, h2 a, h3 a, #sidebar-right a {
 
 #footer {
     text-align: center;
+    width: auto;
     }
 
 
@@ -96,7 +97,7 @@ h1 a, h2 a, h3 a, #sidebar-right a {
     width: 100%;
     }
 
-#header-wrapper, #content-wrapper, #navbar {
+#header-wrapper, #content-wrapper, #navbar, #footer {
   margin-left: 193px;
   margin-right: 34px;
   }
