--- a/sites/all/themes/scholar_theme_05/scholar-theme-05.css
+++ b/sites/all/themes/scholar_theme_05/scholar-theme-05.css
@@ -1,7 +1,3 @@
-html {
-  min-width: 960px;
-  }
-
 body {
     background: url(images/body-bg-no-sidebar.jpg) 50% 135px repeat-y #6d2a01;
     color:#666;
@@ -42,15 +38,19 @@ a, a:visited {
     text-decoration: underline;
     }
 
+.title a {
+  color:#870202;
+  font-size: 1.2em;
+  }
+
 a:hover {
-    color:#672301;
-    }
+  color:#000;
+  }
 
 
-h1, h2, h3, #sidebar-right a, #sidebar-left a {
+h2, h3, #sidebar-right a, #sidebar-left a, .title a {
     font-weight: normal;
-    color:#870202;
-    text-decoration: none;
+    text-decoration: none !important;
     }
 
 #block-menu-primary-links {
@@ -66,6 +66,7 @@ h1, h2, h3, #sidebar-right a, #sidebar-left a {
   text-align:right;
   }
 
+
 /* LAYOUT */
 
 .column {
@@ -80,7 +81,8 @@ h1, h2, h3, #sidebar-right a, #sidebar-left a {
 
 #sidebar-right, #header-right {
     width: 154px;
-    padding-left: 10px !important;
+    padding-left: 20px !important;
+    padding-right: 25px !important;
     }
 
 #header-wrapper, #content-wrapper {
@@ -99,6 +101,9 @@ body.navbar #content-main {
   margin-top: 30px;
   }
 
+#footer {
+  padding: 30px;
+  }
 
 /* HEADER ELEMENTS */
 
@@ -199,4 +204,15 @@ body.two-sidebars #navbar {
 
 #logo img {
   width: 133px;
+  }
+
+/* Nodes */
+
+.submitted {
+  color: #a1b1b1;
+  display:block;
+  }
+
+.node {
+  border-bottom: 1px dashed #615E57;
   }
