admin-menu was too dark

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -30,11 +30,11 @@ body {
   }
 
 #admin-menu, #admin-menu li li.expandable, #admin-menu li li {
-  background:#909090;
+  background:#bbbaba;
   }
 
 #admin-menu li li {
-  opacity: .9;
+  opacity: 1 !important;
   }
 
 #admin-menu li li a:hover, #admin-menu li li li a:hover, #admin-menu li li li a, #admin-menu li li li a:visited {
