--- a/sites/all/themes/scholar_theme_01/scholar-theme-01.css
+++ b/sites/all/themes/scholar_theme_01/scholar-theme-01.css
@@ -54,12 +54,16 @@ body.cp-toolbar-on #wrapper {
 
 #sidebar-left, #header-left {
     width: 178px;
-    right: 199px;
     padding: 0 1px;
+    right: 200px;
     }
 
+body.sidebar-left #sidebar-left, body.header-left-main #header-left {
+  right: 180px;
+  }
+
 #content-wrapper, #header-wrapper {
-    padding-left: 179px;
+    padding-left: 180px;
     }
 
 #sidebar-right {
@@ -113,7 +117,7 @@ body.navbar #header p {
   }
 
 #header-wrapper {
-  padding-right: 90px;
+  padding-right: 130px;
   }
 
 
