--- a/sites/all/themes/scholar_theme_03/scholar-theme-03.css
+++ b/sites/all/themes/scholar_theme_03/scholar-theme-03.css
@@ -3,7 +3,7 @@ html {
     }
 
 body {
-    background: url(images/body-bg.png) repeat-x left top #fff;
+    background: #fff;
     color:#282828;
     font:.9em/165% "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
     }
@@ -16,10 +16,14 @@ body.cp-toolbar-on {
   background-position: 0 42px;
   }
 
+#wrapper {
+  background: url(images/body-bg.png) repeat-x left top #fff;
+  }
+
 #container {
-    width: 910px;
-    margin: 0 auto;
-    }
+  width: 910px;
+  margin: 0 auto;
+  }
 
 a, a:visited {
     color:#b54f26;
@@ -53,13 +57,18 @@ h1, h2, h3, #sidebar-right a, #navbar, #header, #sidebar-right, #sidebar-left {
 /* LAYOUT ELEMENTS */
 
 #sidebar-left, #header-left {
-    width: 178px;
-    right: 199px;
-    padding: 0 1px;
+    width: 180px;
+    right: 210px;
+    padding-left: 0;
     }
 
+#sidebar-right, #header-right {
+  padding-right: 0;
+  }
+
 #content-wrapper, #header-wrapper {
-    padding-left: 179px;
+    padding-left: 190px;
+    padding-right: 230px
     }
 
 #sidebar-right {
