--- a/sites/all/themes/scholar_theme_07/scholar-theme-07.css
+++ b/sites/all/themes/scholar_theme_07/scholar-theme-07.css
@@ -66,6 +66,7 @@ h1 a, h2 a, h3 a, #sidebar-right a {
 #content-wrapper {
   padding-left: 188px;
   padding-right: 220px;
+  padding-top: 30px;
   }
 
 #content-main {
