--- a/sites/all/themes/scholar_theme_04/scholar-theme-04.css
+++ b/sites/all/themes/scholar_theme_04/scholar-theme-04.css
@@ -41,25 +41,34 @@ h2.title {
 
 /* LAYOUT */
 
-#sidebar-left, #header-left, #sidebar-right, #header-right {
+#sidebar-left, #header-left, #sidebar-right, #header-right, body.sidebar-left #sidebar-left, body.header-left-main #header-left {
     width: 180px;
     }
 
-#header-left {
-  right: 220px;
+#sidebar-left, body.sidebar-left #sidebar-left {
+  right: 190px;
+  padding-left: 0;
   }
 
-#sidebar-left {
-  right: 200px;
+#header-left, body.header-left-main #header-left {
+  right: 210px;
+  padding-left: 0;
+  }
+
+#sidebar-right, #header-right {
+  padding-right: 0;
   }
 
 #content-wrapper, #header-wrapper {
-  padding-left: 200px;
-  padding-right: 220px;
+  padding-left: 190px;
+  padding-right: 190px;
+  }
+
+#header-wrapper {
+  padding-right: 210px;
   }
 
 #content-wrapper {
-  padding-right: 200px;
   padding-top: 20px;
   }
 
@@ -153,11 +162,25 @@ body.sidebar-left #footer, body.two-sidebars #footer {
 
 /* Nodes */
 
-#content-main .node, body.section-node-edit #content, body.section-node-add #content {
+#content-main .node, body.section-node-edit #content, body.section-node-add #content, #comments {
     padding: 10px;
     background: #fff;
     margin-bottom: 10px;
     }
+
+#comments {
+  background: #EFEFEF;
+  }
+
+h2#comments-title, .comment {
+  border: none;
+  padding-bottom: 0;
+  }
+
+h2#comments-title {
+  margin: 0;
+  font-size: 1.2em;
+  }
 
 .submitted {
   color: #a1b1b1;
