--- a/sites/all/themes/scholar_theme_01/scholar-theme-01.css
+++ b/sites/all/themes/scholar_theme_01/scholar-theme-01.css
@@ -58,8 +58,8 @@ body.cp-toolbar-on #wrapper {
     right: 200px;
     }
 
-body.sidebar-left #sidebar-left, body.header-left-main #header-left {
-  right: 180px;
+body.sidebar-left #content-wrapper, body.header-left-main #header-wrapper {
+  padding-right: 20px;
   }
 
 #content-wrapper, #header-wrapper {
