--- a/sites/all/themes/scholar_theme_05/scholar-theme-05.css
+++ b/sites/all/themes/scholar_theme_05/scholar-theme-05.css
@@ -74,14 +74,10 @@ h2, h3, #sidebar-right a, #sidebar-left a, .title a, .title a:visited {
   }
 
 #sidebar-left, #header-left {
-  width: 133px;
-  right: 257px;
+  width: 130px;
+  right: 254px;
   padding-right: 10px !important;
   padding-left: 44px !important;
-  }
-
-body.sidebar-left #sidebar-left {
-  right:187px;
   }
 
 #sidebar-right, #header-right {
@@ -93,13 +89,17 @@ body.sidebar-left #sidebar-left {
 #header-wrapper, #content-wrapper {
   width: auto;
   margin: 0 auto;
-  padding-left: 187px;
+  padding-left: 184px;
   padding-right: 269px;
   }
 
 body.header-main #sidebar-left, body.header-main-right #sidebar-left {
   position:relative;
   top: -143px;
+  }
+
+body.sidebar-left #content-wrapper {
+  padding-right: 70px;
   }
 
 body.navbar #content-main {
@@ -126,11 +126,7 @@ body.navbar #content-main {
     }
 
 #header-left {
-  right: 357px;
-  }
-
-body.header-left-main #header-left {
-  right:178px;
+  right: 354px;
   }
 
 #header-right {
