--- a/sites/all/themes/scholar_theme_06/scholar-theme-06.css
+++ b/sites/all/themes/scholar_theme_06/scholar-theme-06.css
@@ -54,8 +54,8 @@ h1 a, h2 a, h3 a, #sidebar-right a {
   padding-right: 10px;
   }
 
-body.sidebar-left #sidebar-left, body.header-left-main #header-left {
-  right: 202px;
+body.header-left-main #header-wrapper {
+  padding-right: 0;
   }
 
 #sidebar-right, #header-right {
@@ -81,7 +81,7 @@ body.sidebar-right #content-wrapper {
   }
 
 body.sidebar-left #content-wrapper {
-  padding-right: 60px;
+  padding-right: 50px;
   }
 
 body.no-sidebars #content-wrapper {
