--- a/sites/all/themes/scholar_theme_02/scholar-theme-02.css
+++ b/sites/all/themes/scholar_theme_02/scholar-theme-02.css
@@ -57,6 +57,10 @@ h1 a, h2 a, h3 a, #sidebar-right a {
     padding-right: 230px
     }
 
+body.sidebar-left #content-wrapper, body.header-left-main #header-wrapper {
+  padding-right: 20px;
+  }
+
 #sidebar-right {
     border-left: 1px solid #ccc;
     }
