removed pad class; reconfigured shield display

--- a/sites/all/modules/vsite/vsite_generic_settings/theme/vsite_generic_settings-shield-picker.css
+++ b/sites/all/modules/vsite/vsite_generic_settings/theme/vsite_generic_settings-shield-picker.css
@@ -9,21 +9,26 @@
 .shield-picker li {
   float: left;
   width: 100px;
-  height: 80px;
+  height: 120px;
   border: 1px solid #ccc;
   text-align: center;
   margin: 2px;
-  padding: 20px 0;
   cursor: pointer;
+  }
+
+.shield-picker img {
+  margin-top: 20px;
   }
 
 .shield-picker li.checked {
   border-color: red;
   border-width: 3px;
   width: 96px;
-  height: 79px;
-  padding: 18px 0;
-  margin-bottom: -1px;
+  height: 116px;
+  }
+
+.shield-picker li.checked img {
+  margin-top: 18px;
   }
 
 /*
