--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -52,7 +52,9 @@ h3 {
     }
 
 
-
+div.form-item {
+  border: none;
+  }
 
 
 /* HEADER ELEMENTS */
@@ -201,6 +203,7 @@ li#get-form a {
   height: 46px;
   text-indent: -999em;
   float:left;
+  margin: 0;
   }
 
 #search-person {
