--- a/sites/all/themes/scholar_theme_01/scholar-theme-01.css
+++ b/sites/all/themes/scholar_theme_01/scholar-theme-01.css
@@ -36,7 +36,6 @@ h1, h2, h3, #sidebar-left a, #header {
     font-weight: normal;
     }
 
-
 h1 a, h2 a, h3 a, #sidebar-left a {
     font-style: normal;
     }
@@ -91,8 +90,9 @@ body.navbar-on #header {
   }
 
 #header h1 {
-    font-size: 3em;
+    font-size: 2em;
     line-height:1em;
+     font-style: normal;
     }
 
 #header h2 {
@@ -102,6 +102,7 @@ body.navbar-on #header {
 
 #header h1 a, #header h1 a:visited {
     color:#282828;
+    font-style: normal;
     }
 
 #header p {
