--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -57,7 +57,7 @@ p, div.messages, #content-main .views-row {
 	margin-bottom: 1.5em;
 	}
 
-h1, h2, h3, h4 {
+h2, h3, h4 {
   margin-bottom: 0;
   margin-top: 1em;
   }
@@ -66,7 +66,7 @@ h2.title {
   margin-bottom: 1em;
   }
 
-#header p {
+h1, #header h2, #header p {
   margin: 0;
   }
 
