--- a/sites/all/themes/scholar_theme_02/scholar-theme-02.css
+++ b/sites/all/themes/scholar_theme_02/scholar-theme-02.css
@@ -110,12 +110,16 @@ body.sidebar-left #content-wrapper, body.header-left-main #header-wrapper {
     }
 
 #header h1, #header h2, #header h3, #header a, #header a:visited, #header h1 a, #header h1 a:visited {
-    color:#FFF;
+    color:#EFEFEF;
     }
 
 #header a, #header a:visited {
     text-decoration: none;
     }
+
+#navbar a, #navbar a:visited {
+  color: #fff;
+  }
 
 #header a:hover {
     color:#F9E433;
