fixing float issue with buttons

--- a/sites/all/modules/vsite/vsite_design/theme/vsite_design_theme_picker.css
+++ b/sites/all/modules/vsite/vsite_design/theme/vsite_design_theme_picker.css
@@ -6,7 +6,7 @@ ul.theme-picker {
 
 li.item-theme-picker  {
   background: url(images/theme-picker-bg.png) no-repeat top center transparent;
-  padding: 23px 0;
+  padding: 23px 0 30px 0;
   float: left;
   width: 600px;
   text-align: center;
@@ -88,4 +88,8 @@ ul.theme-picker li.checked h3 {
 
 form#cp-settings-form fieldset {
   display:none;
+  }
+
+#cp-settings-form  {
+  clear: both;
   }
