changes to header margins on all themes

--- a/sites/all/themes/scholar_theme_05/scholar-theme-05.css
+++ b/sites/all/themes/scholar_theme_05/scholar-theme-05.css
@@ -53,6 +53,16 @@ h2, h3, #sidebar-right a, #sidebar-left a, .title a, .title a:visited {
     text-decoration: none !important;
     }
 
+h2, h3, h4 {
+  margin-bottom: 0;
+  margin-top: 1em;
+  }
+
+h2.title {
+  margin-bottom: 1em;
+  }
+
+
 #block-menu-primary-links {
     text-transform: uppercase;
     }
