--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -98,6 +98,7 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
   position: absolute;
   width: 100%;
   overflow: auto;
+  overflow-x: hidden;
   top: 0;
   bottom: 0;
   }
