--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -57,16 +57,8 @@ p, div.messages, #content-main .views-row {
 	margin-bottom: 1.5em;
 	}
 
-h2, h3, h4 {
-  margin-bottom: 0;
-  margin-top: 1em;
-  }
 
-h2.title {
-  margin-bottom: 1em;
-  }
-
-h1, #header h2, #header p {
+#header h1, #header h2, #header p {
   margin: 0;
   }
 
