--- a/sites/all/themes/scholar_theme_01/scholar-theme-01.css
+++ b/sites/all/themes/scholar_theme_01/scholar-theme-01.css
@@ -40,6 +40,16 @@ h1 a, h2 a, h3 a, #sidebar-left a {
     font-style: normal;
     }
 
+
+h2, h3, h4 {
+  margin-bottom: 0;
+  margin-top: 1em;
+  }
+
+h2.title {
+  margin-bottom: 1em;
+  }
+
 /* LAYOUT ELEMENTS */
 
 
