--- a/sites/all/themes/scholar_theme_02/scholar-theme-02.css
+++ b/sites/all/themes/scholar_theme_02/scholar-theme-02.css
@@ -36,6 +36,16 @@ h1, h2 {
     font-size: 1.4em;
     }
 
+
+h2, h3, h4 {
+  margin-bottom: 0;
+  margin-top: 1em;
+  }
+
+h2.title {
+  margin-bottom: 1em;
+  }
+
 h1 a, h2 a, h3 a, #sidebar-right a {
     font-style: normal;
     }
