--- a/sites/all/themes/scholar_theme_03/scholar-theme-03.css
+++ b/sites/all/themes/scholar_theme_03/scholar-theme-03.css
@@ -41,6 +41,14 @@ h1, h2, h3, #sidebar-right a, #navbar, #header, #sidebar-right, #sidebar-left {
     font-family: georgia, serif;
     }
 
+h2, h3, h4 {
+  margin-bottom: 0;
+  margin-top: 1em;
+  }
+
+h2.title {
+  margin-bottom: 1em;
+  }
 
 .title a, #top a, .views-field-title a, #block-vsite_menus-0 a {
     font-style: normal;
