--- a/sites/all/themes/scholar_theme_04/scholar-theme-04.css
+++ b/sites/all/themes/scholar_theme_04/scholar-theme-04.css
@@ -30,6 +30,12 @@ h1 a, h2 a, h3 a, #sidebar-right a {
     font-style: normal;
     }
 
+h2, h3, h4 {
+  margin-bottom: 0;
+  margin-top: 1em;
+  }
+
+
 h2, h2.title {
   color:#51787C;
   margin-bottom: 0;
