--- a/sites/all/themes/scholar_theme_06/scholar-theme-06.css
+++ b/sites/all/themes/scholar_theme_06/scholar-theme-06.css
@@ -37,6 +37,16 @@ h1 a, h2 a, h3 a, #sidebar-right a {
     font-style: normal;
     }
 
+h2, h3, h4 {
+  margin-bottom: 0;
+  margin-top: 1em;
+  }
+
+h2.title {
+  margin-bottom: 1em;
+  }
+
+
 /* LAYOUT ELEMENTS */
 
 .column {
