--- a/sites/all/themes/scholar_theme_07/scholar-theme-07.css
+++ b/sites/all/themes/scholar_theme_07/scholar-theme-07.css
@@ -46,6 +46,16 @@ h1 a, h2 a, h3 a, #sidebar-right a {
     font-style: bold;
     }
 
+h2, h3, h4 {
+  margin-bottom: 0;
+  margin-top: 1em;
+  }
+
+h2.title {
+  margin-bottom: 1em;
+  }
+
+
 /* LAYOUT ELEMENTS */
 
 #sidebar-left {
