minor change to buttons

--- a/sites/all/modules/vsite/cp/theme/cp_nice_buttons.css
+++ b/sites/all/modules/vsite/cp/theme/cp_nice_buttons.css
@@ -1,6 +1,6 @@
 a.submit-link {
   height: 26px;
-  background: url(images/buttons-sprite.png) no-repeat 100% -140px;
+  background: url(images/buttons-sprite.png) no-repeat 100% -112px;
   padding-right: 16px;
   display:inline-block;
   font-size: 13px !important;
@@ -10,13 +10,13 @@ a.submit-link {
   }
 
 a.submit-link span.button-inner {
-  background: url(images/buttons-sprite.png) no-repeat 0 -28px;
+  background: url(images/buttons-sprite.png) no-repeat 0 0;
   display: block;
   height: 26px;
   }
 
 a.submit-link span.label {
-  background: url(images/buttons-sprite.png) repeat-x 0 -84px;
+  background: url(images/buttons-sprite.png) repeat-x 0 -56px;
   color: #000;
   text-decoration: none;
   text-shadow:0 1px 0 rgba(206, 214, 221, 0.75);
@@ -27,15 +27,19 @@ a.submit-link span.label {
   height: 14px;
   }
 
+a.edit-reset span.label {
+  color: #555;
+  }
+
 
 a.edit-reset {
-  background-position: 100% -112px;
+  background-position: 100% -140px;
   }
 
 a.edit-reset span.button-inner {
-  background-position: 0 0;
+  background-position: 0 -28px;
   }
 
 a.edit-reset span.label {
-  background-position: 0 -56px;
+  background-position: 0 -84px;
   }
