fixed float issue on bottom buttons

--- a/sites/all/modules/vsite/vsite_design/theme/vsite_design_theme_picker.css
+++ b/sites/all/modules/vsite/vsite_design/theme/vsite_design_theme_picker.css
@@ -81,6 +81,10 @@ ul.theme-picker li.checked h3 {
   font-size: 1.2em;
   }
 
+.theme_subnav li:hover {
+  background: #fff;
+  }
+
 .theme_subnav li.active {
   background: #f80000;
   color: #fff;
