got admin views links out of the way; fix to header in theme 03

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -140,6 +140,9 @@ body.admin-menu #main-content {
   font-size: 14px;
   }
 
+#cp-sidemenu li a:hover {
+  background: #fff;
+  }
 
 #cp-sidemenu li.active a,
 #cp-sidemenu li.active-trail a {
