--- a/sites/all/themes/cp_theme/tabs.css
+++ b/sites/all/themes/cp_theme/tabs.css
@@ -11,29 +11,28 @@
  */
 
   div.tabs {
-    margin: 0 0 5px 0;
-    background:#dde7ad;
-    border-bottom: 1px solid #c4cd98
     }
 
-  ul.primary {
-    margin: 0;
+  div.tabs ul {
+    margin: 0 0 5px 0;
     padding: 0 0 0 10px;
     border-width: 0;
     list-style: none;
     white-space: nowrap;
     line-height: normal;
-
+    background:#dde7ad;
+    border-bottom: 1px solid #c4cd98
+    height: 42px;
   }
 
-  ul.primary li {
+  div.tabs li {
     float: left;
     margin: 0;
     padding: 0;
     font-size: 14px;
   }
 
-  ul.primary li a {
+  div.tabs li a {
     display: block;
     margin: 0;
     padding: 13px 20px;
@@ -45,23 +44,22 @@
   }
 
 
-  ul.primary li a:hover {
+ div.tabs li a:hover {
     border-width: 0;
     background-color: transparent;
 
   }
 
 
-  ul.primary li.active a,
-  ul.primary li.active a:hover {
+  div.tabs li.active a,
+  div.tabs li.active a:hover {
     border-width: 0;
     color: #000;
     background-color: transparent;
   }
 
-.page-cp-news #cp-content div.tabs,
-.page-cp-news-activity-me #cp-content div.tabs,
-.page-cp-news-activity-all #cp-content div.tabs {
+/* Use this if you want to have a second column for tabs instead of a horizontal bar
+div.tabs {
   width: 166px;
   position:absolute;
   background:#f2f3f3;
@@ -73,21 +71,14 @@
   right: auto;
   }
 
-.page-cp-news #cp-content div.tabs ul,
-.page-cp-news-activity-me #cp-content div.tabs ul,
-.page-cp-news-activity #cp-content div.tabs li,
-.page-cp-news-activity-me #cp-content div.tabs li,
-.page-cp-news-activity-all #cp-content div.tabs ul,
-.page-cp-news-activity-all #cp-content div.tabs li {
+div.tabs li {
   padding: 0;
   margin: 0;
   display: block;
   width: 166px;
   }
 
-.page-cp-news #cp-content div.tabs li a,
-.page-cp-news-activity-me #cp-content div.tabs li a,
-.page-cp-news-activity-all #cp-content div.tabs li a {
+div.tabs li a {
   border-bottom:1px solid #BFC6C6;
   color:#626161;
   display:block;
@@ -96,13 +87,13 @@
   font-weight: normal;
   }
 
-.page-cp-news #cp-content div.tabs li.active a,
-.page-cp-news-activity-me #cp-content div.tabs li.active a,
-.page-cp-news-activity-all #cp-content div.tabs li.active a {
+div.tabs li.active a {
   background:url(images/cp-sidemenu-active.png) repeat-x 0 100% #B8C0C0;
   color: #000;
   text-shadow: 0 1px 0 rgba(206, 214, 221, 0.75)
   }
+
+*/
 
 .view-vsite-activity {
   margin-left: 196px;
