--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -129,11 +129,12 @@ fieldset.group-account-basics {
 
 /* Various Views */
 
+/*
 #views-bulk-operations-select {
   left:555px;
   position:absolute;
   top:12px;
-  }
+  }*/
 
 
 /* These really should have a standard class "top-marg" or something */
