--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -247,3 +247,18 @@ p {
 .view-vsite-activity .views-field-message span:after {
   content: ':';
   }
+  
+/* Content Area */
+#cp-content .innerframe form#views-bulk-operations-form--1 {
+  margin: 0px;
+}
+
+.section-cp fieldset.vsite_content_filter_box {
+  border: 0px;
+  margin-bottom:0px;
+}
+
+.section-cp fieldset.vsite_content_filter_box .fieldset-wrapper{
+	margin-bottom:5px;
+}
+}
