fixed no-sidbars padding bug

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -183,6 +183,10 @@ div.terms {
 	width: 100%;
 	}
 
+body.no-sidebars #content-main, body.header-main #header-main {
+  width: auto;
+  }
+
 #header-wrapper, #navbar, #content-wrapper, #footer {
 	clear: both;
 	}
