fixed line-height front page new sites

--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -199,6 +199,7 @@ li#get-form a {
   border: 1px solid #e1e1e1;
   border-top: none;
   border-bottom: none;
+  line-height: 110%;
   }
 
 #footer {
