fixed line-height register form labels

--- a/sites/all/themes/scholar_base/forms.css
+++ b/sites/all/themes/scholar_base/forms.css
@@ -20,6 +20,7 @@ div.fieldset, fieldset, .container-inline-date {
 
 fieldset h2.fieldset-title, div.form-item label {
   font-size:11px;
+  line-height: 13px;
   font-weight:normal;
   margin:0;
   padding:0;
